# clip_engine

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  run.sh  test_whisper.py
.github/workflows/: youtube-cards.yml
src/api/: __init__.py
src/api/routes/: download_youtube.py  index.py
src/controllers/video_processing/: precise_tracker.py  speaker_identifier.py  video_processor.py
src/controllers/youtube/: get_info_video.py
src/services/: brain_IA.py  downloader.py
